[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pynowcast"
version = "1.0.0"
description = "The ECB Nowcasting Toolbox Python implementation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Carmen Pelayo Fernández", email = "carmen.pelayo@bbva.com" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "openpyxl>=3.1"
]

[project.urls]
"Homepage" = "https://github.com/baptiste-meunier/Nowcasting_toolbox"
"Repository" = "https://github.com/tu-usuario/nowcasting_toolbox_py"

[tool.setuptools.packages.find]
include = ["pynowcast*"]
