[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pynowcast"
version = "1.2.0"
description = "Python re-implementation of the ECB nowcasting toolbox (DFM, bridge equations, BVAR, news decomposition)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0"]

[project.optional-dependencies]
full = ["matplotlib>=3.7", "openpyxl>=3.1"]

[tool.setuptools.packages.find]
include = ["pynowcast*"]
